--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     </head>
     <body>
         <header>
-            <a href=""><span>WEB</span><span>STUDIO</span></a>
             <nav>
-                <!--Правильно ли  использовать список внутри нава и выровнять его потом дисплеем в строку?-->
+                <a href="./index.html">WEBSTUDIO</a>
                 <ul>
                     <li>
                         <a href="">Studio</a>
@@ -22,30 +21,27 @@
                     </li>
                 </ul>
             </nav>
-            <!--контакты в отдельном теге что бы их потом выровнять по правому краю или добавить их в список как элементы ли?-->
             <address>
                 <ul>
                     <li>
-                        <a href="mailto:info@devstudio.com">info@d evstudio.com</a>
+                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li>
-                        <a href="tel:+110001111111">+11 (000) 1 11-1 1-11</a>
+                        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
             </address>
-
-            <!--долго сомневался, являеться ли эта часть сайта элементом хэдера, решил что все же являеться как на примере сайта GOIT, 
-      но если принять во внимание что это лендинг, то тогда это скорее не хедер-->
-            <div>
-                <h1>Effective Solutions for Your Business</h1>
-                <button type="button">Order Service</button>
-            </div>
         </header>
 
-        <!--мэйн, содержит 2 секции-->
+        <!--мэйн, содержит 3 секции-->
         <main>
             <section>
-                <!--правильно ли использовать здесь список? Могу ли я его потом выровнять в рядок?-->
+                <h1>Effective Solutions for Your Business</h1>
+                <button type="button">Order Service</button>
+            </section>
+
+            <section>
+                <h2></h2>
                 <ul>
                     <li>
                         <h3>Strategy</h3>
@@ -79,7 +75,6 @@
             </section>
 
             <section>
-                <!--правильно ли использовать здесь список? Могу ли я его потом выровнять в рядок?-->
                 <h2>Our Team</h2>
                 <ul>
                     <li>
@@ -106,12 +101,11 @@
             </section>
         </main>
 
-        <!--футер. Логотип должен состоять из текста? Его нужно сделать при помощи спанов?-->
         <footer>
-            <a href=""><span>WEB</span><span>STUDIO</span></a>
+            <a href="./index.html">WEBSTUDIO</a>
             <p>
-                Increase the flow of customers and sales for your b usiness with digi tal marketing
-                & growth solutions.
+                Increase the flow of customers and sales for your business with digital marketing &
+                growth solutions.
             </p>
         </footer>
     </body>
