--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <nav>
-                <a href="./index.html">WEBSTUDIO</a>
+                WebStudio
                 <ul>
                     <li>
                         <a href="">Studio</a>
@@ -41,7 +41,7 @@
             </section>
 
             <section>
-                <h2></h2>
+                <h2>Hidden title</h2>
                 <ul>
                     <li>
                         <h3>Strategy</h3>
@@ -102,7 +102,7 @@
         </main>
 
         <footer>
-            <a href="./index.html">WEBSTUDIO</a>
+            WebStudio
             <p>
                 Increase the flow of customers and sales for your business with digital marketing &
                 growth solutions.
